# side-display

./: .gitignore  README.md  com.github.marbetschar.side-display.yml  meson.build  side-display.sh
data/: side-display.appdata.xml  side-display.desktop
example/: gnome-screen-cast.py
patch/: mutter_meta-compositor-native_no-wayland.patch
src/: Application.vala  DBus.vala
vapi/: evdi-1.9.1.vapi  meson.build
